--- a/backend/package.json
+++ b/backend/package.json
@@ -19,10 +19,14 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@typegoose/typegoose": "^12.4.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-async-handler": "^1.2.0",
+    "mongoose": "^8.3.4",
     "save-dev": "^0.0.1-security"
   }
 }
