--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,4 @@
 MONGODB_URI= mongodb+srv://rajdbuser:rajdbstore@cluster0.cwcc7eg.mongodb.net/rajdb?retryWrites=true&w=majority&appName=Cluster0
+# MONGODB_URI= mongodb://localhost/rajdb
+# JWT_SECRET= somethingsecret
+# PAYPAL_CLIENT_ID= sb
