--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 MONGODB_URI= mongodb+srv://rajdbuser:rajdbstore@cluster0.cwcc7eg.mongodb.net/rajdb?retryWrites=true&w=majority&appName=Cluster0
 # MONGODB_URI= mongodb://localhost/rajdb
 # JWT_SECRET= somethingsecret
-# PAYPAL_CLIENT_ID= sb
+PAYPAL_CLIENT_ID= AQzCXu7up7UVkEu_txDFrviScUK_brpdfRR5JAT9Ube0peaee-4Xurb0HH-ExpYLsdusRhI2fv3sqIsE
